# POO-Tema2

./: Consultatie.cpp  Consultatie.h  Consultatie_dermato.cpp  Consultatie_dermato.h  Consultatie_inima.cpp  Consultatie_inima.h  Consultatie_ochi.cpp  Consultatie_ochi.h  Exceptie_prenume_litera.h  Exceptie_varsta.cpp  Exceptie_varsta.h  Medic.cpp  Medic.h
tema2/: CMakeLists.txt  main.cpp
