cmake_minimum_required(VERSION 3.24)
project(tema2)

set(CMAKE_CXX_STANDARD 17)

add_executable(tema2 main.cpp Exceptie_varsta.h Exceptie_prenume_litera.h Medic.cpp Medic.h Consultatie.h Consultatie.cpp Consultatie_ochi.h Consultatie_ochi.cpp Consultatie_inima.h Consultatie_inima.cpp Consultatie_dermato.h Consultatie_dermato.cpp Exceptie_varsta.cpp)
